<resources>
    <string name="app_name">KODKOY</string>
    <string name="KODKOY">KODKOY</string>
    <string name="giris">GİRİŞ</string>
    <string name="hesap_olustur_buyuk">HESAP OLUŞTUR</string>
    <string name="kayit_ol">Kayıt Ol</string>
    <string name="giris_yap">Giriş Yap</string>
    <string name="hesap_olustur">Hesap Oluştur</string>
    <string name="uygulamada_yeni_misin">Uygulamada yeni misin?</string>
    <string name="bineary_mesaj">01000010 01110101 00100000 01100010 01101001 01110010 00100000 01110011 01100001 01110110 01100001 01110011 01011111 00100000 01110101 01101110 01110101 01110100 01110101 01101101 01100001 00100000 01101011 01100001 01101100 01101101 01100001 00100000 01101101 01100101 01110011 01100101 01101100 01100101 01110011 01101001 00101110 00100000 01000001 01110011 01101100 01100001 00100000 01110110 01100001 01111010 01100111 01100101 11100111 01101101 01100101 00101110 00100000 00110000 01101110 01110100 01101001 01101011 01100001 01101101 00110001 01101110 00100000 01100001 01101100 00110001 01101110 01100001 01100011 01100001 01101011 00100000 01100001 01101110 01100011 01100001 01101011 00100000 01111010 01100001 01101101 01100001 01101110 00100000 01110110 01100001 01110010 00101110 00100000 01001000 01100101 01100100 01100101 01100110 01101100 01100101 01110010 01100101 00100000 01100111 01101001 01100100 01100101 01101110 00100000 01111001 01101111 01101100 00100000 01110100 01100001 01011111 01101100 00110001 00100000 01101111 01101100 01110011 01100001 01100100 01100001 00100000 01100001 01110011 01101100 01100001 00100000 01110000 01100101 01110011 00100000 01100101 01110100 01101101 01100101 00101110 00100000 01010101 01101110 01110101 01110100 01101101 01100001 00100000 01100010 01110101 00100000 01100010 01101001 01110010 00100000 01101000 01100001 01111001 01100001 01110100 01110100 01100001 00100000 01101011 01100001 01101100 01101101 01100001 00100000 01101101 01100101 01110011 01100101 01101100 01100101 01110011 01101001 00100000 01110110 01100101 00100000 01110011 01100001 01101110 01100001 00100000 01111001 01100001 01110000 00110001 01101100 01100001 01101110 01101100 01100001 01110010 00100000 11110110 01100100 01100101 01110100 01101001 01101100 01100101 01100011 01100101 01101011 00101110 00100000 01000101 00011111 01100101 01110010 00100000 01011111 01101001 01101101 01100100 01101001 00100000 01110110 01100001 01111010 01100111 01100101 11100111 01100101 01110010 01110011 01100101 01101110 00100000 01101111 01101110 01101100 01100001 01110010 00100000 01101011 01100001 01111010 01100001 01101110 00110001 01110010 00101110 00101110 00101110</string>
    <string name="title_activity_sign_in_page">SignInPage</string>
    <string name="isim">isim</string>
    <string name="email">email</string>
    <string name="sifre">şifre</string>
    <string name="cikis_yap">Çıkış yap</string>
    <string name="paylas">Paylaş</string>
    <style name="yorumunuzu_ekleyin">Yorumunuzu ekleyin</style>
    <string name="isim_simge"> » </string>
    <string name="email_simge"> \@ </string>
    <string name="sifre_simge"> § </string>
    <string name="ekle_simgesi"> + </string>
    <string name="menu_simgesi"> = </string>
    <string name="geri_simgesi"> « </string>
</resources>