<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginPageLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_page_background"
    tools:context=".view.LoginPage">

    <TextView
        android:id="@+id/txtv_login_baslik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:shadowColor="@color/black"
        android:shadowDx="12"
        android:shadowDy="12"
        android:shadowRadius="2.5"
        android:text="@string/KODKOY"
        android:textColor="@color/theme_text_color"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="217dp"
        android:layout_height="0dp"
        android:alpha="0.25"
        android:fontFamily="@font/fira_code_light"
        android:text="@string/bineary_mesaj"
        android:textColor="@color/login_page_binary_text"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_code"
        android:text="@string/giris_yap"
        android:textColor="@color/theme_text_color"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtv_login_baslik"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/fira_code"
        android:text="@string/uygulamada_yeni_misin"
        android:textColor="@color/theme_text_color"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/etxt_login_email"
        app:layout_constraintStart_toStartOf="@+id/etxt_login_email" />

    <Button
        android:id="@+id/btn_login_kayit_ol"
        android:layout_width="64dp"
        android:layout_height="22dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/kayit_button"
        android:fontFamily="@font/fira_code"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="btn_kayitOl"
        android:text="@string/kayit_ol"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/theme_text_color"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/etxt_login_email"
        app:layout_constraintEnd_toEndOf="@+id/etxt_login_email"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etxt_login_email"
        style="@style/edit_text_font"
        android:layout_width="351dp"
        android:layout_height="43dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/login_items"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="45dp"
        android:textColor="@color/theme_text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/etxt_login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/fira_code_light"
        android:text="@string/email_simge"
        android:textAlignment="center"
        android:textColor="@color/theme_text_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/etxt_login_email"
        app:layout_constraintStart_toStartOf="@+id/etxt_login_email"
        app:layout_constraintTop_toTopOf="@+id/etxt_login_email" />

    <EditText
        android:id="@+id/etxt_login_password"
        style="@style/edit_text_font"
        android:layout_width="351dp"
        android:layout_height="43dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/login_items"
        android:imeOptions="actionDone|actionGo"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:paddingStart="45dp"
        android:textAllCaps="false"
        android:textColor="@color/theme_text_color"
        android:textIsSelectable="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_giris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/fira_code_light"
        android:text="@string/sifre_simge"
        android:textAlignment="center"
        android:textColor="@color/theme_text_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/etxt_login_password"
        app:layout_constraintStart_toStartOf="@+id/etxt_login_password"
        app:layout_constraintTop_toTopOf="@+id/etxt_login_password" />

    <Button
        android:id="@+id/btn_giris"
        android:layout_width="167dp"
        android:layout_height="43dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/buyuk_butonlar"
        android:fontFamily="@font/fira_code_semibold"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="btn_giris"
        android:text="@string/giris"
        android:textColor="@color/theme_text_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>