<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/main_page_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainPage">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:shadowColor="@color/black"
        android:shadowDx="12"
        android:shadowDy="12"
        android:shadowRadius="2.5"
        android:text="@string/KODKOY"
        android:textColor="@color/theme_text_color"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_ekle"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/kucuk_butonlar"
        android:fontFamily="@font/fira_code_light"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="btn_ekle"
        android:text="@string/ekle_simgesi"
        android:textAlignment="center"
        android:textColor="@color/theme_text_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_popup_menu"
        app:layout_constraintEnd_toStartOf="@+id/btn_popup_menu"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_popup_menu"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/kucuk_butonlar"
        android:fontFamily="@font/fira_code_light"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="btn_popupMenu"
        android:text="@string/menu_simgesi"
        android:textAlignment="center"
        android:textColor="@color/theme_text_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="77dp"
        app:cardBackgroundColor="@color/theme_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>