<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/login_page_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddImagePage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:shadowColor="@color/black"
        android:shadowDx="12"
        android:shadowDy="12"
        android:shadowRadius="2.5"
        android:text="@string/KODKOY"
        android:textColor="@color/theme_text_color"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_geri_don"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/kucuk_butonlar"
        android:fontFamily="@font/fira_code_semibold"
        android:text="@string/geri_simgesi"
        android:onClick="btn_geri_don"
        android:textColor="@color/theme_text_color"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="77dp"
        app:cardBackgroundColor="@color/theme_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txt_kullanici_adi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="13dp"
        android:fontFamily="@font/fira_code"
        android:text="\@dimetileter"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="353dp"
        android:layout_height="197dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:srcCompat="@drawable/main_page_image" />

    <EditText
        android:id="@+id/txt_goderi_yorumu"
        style="@style/edit_text_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="50dp"
        android:background="@android:color/transparent"
        android:hint="Yorumunuzu girin"
        android:paddingStart="12dp"
        android:textColor="@color/white"
        android:textColorHint="#ffffff"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />


    <ImageButton
        android:id="@+id/btn_resim_ekle"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/transparent"
        android:onClick="btn_resim_ekle"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintBottom_toTopOf="@+id/cardView4"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageButton
        android:id="@+id/btn_konum_ekle"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/transparent"
        android:onClick="btn_konum_ekle"
        android:src="@android:drawable/ic_menu_mylocation"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/cardView4"
        app:layout_constraintEnd_toStartOf="@+id/btn_resim_ekle" />

    <TextView
        android:id="@+id/txt_eklenecek_konum_bilgisi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/fira_code_semibold"
        android:text="Gediz/Kütahya"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/cardView4"
        app:layout_constraintStart_toStartOf="@+id/cardView4" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="353dp"
        android:layout_height="1dp"
        android:layout_marginBottom="25dp"
        app:cardBackgroundColor="@color/theme_text_color"
        app:layout_constraintBottom_toTopOf="@+id/btn_paylas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_paylas"
        android:layout_width="287dp"
        android:layout_height="43dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/buyuk_butonlar"
        android:onClick="btn_paylas"
        android:text="@string/paylas"
        android:textColor="@color/theme_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>